--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -11,6 +11,9 @@
 
 .header {
     align-self: center;
+    color: white;
+    font-family: 'Montserrat';
+    text-align: center;
 
     &__skew {
         -webkit-clip-path: polygon(0 0, 100% 0%, 100% 25%, 0 50%);
@@ -33,6 +36,20 @@
         height: 150vh;
         width: 100vw;
         background-color: #00cb79;
+    }
+
+    h1{
+        font-size: 36px;
+        font-weight: 500;
+        line-height: 44px;
+    }
+
+    p{
+        color: rgba(255,255,255,.75);
+        font-size: 15px;
+        font-weight: 300;
+        line-height: 19px;
+        width: 403px;
     }
 }
 
