--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -65,7 +65,6 @@
     background-color: white;
 
     &__inputs {
-        //background-color: skyblue;
         display:grid;
         grid-template-rows: repeat(4, 1fr);
         grid-template-columns: repeat(4, 1fr);
@@ -79,14 +78,35 @@
     display: grid;
     //grid-template-rows: 1fr 1fr 1fr;
     grid-template-columns: [number-s] 26px [number-e input-s]1fr[input-e];
+    
+    font-family: 'Montserrat';
+    text-align: center;
 
     &__title {
         grid-column: input-s/input-e;
+
+        border-top: 1px solid #b3b3b3;
+        color: #b3b3b3;
+        font-size: 12px;
+        font-weight: 300;
     }
     input {
         grid-column: input-s/input-e;
+
+        border: none;
+        font-size: 15px;
+        text-align: center;
+    
     }
     &__number {
         grid-column: number-s/number-e;
+
+        background-color: #00cb79;
+        color: white;
+        font-size: 20px;
+        text-align: center;
+        padding-top: 1px;
+
+        border-radius: 50%;
     }
 }
