--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -66,8 +66,13 @@
 
     &__inputs {
         display:grid;
-        grid-template-rows: repeat(4, 1fr);
+        grid-template-rows: repeat(4, 27px);
         grid-template-columns: repeat(4, 1fr);
+
+        grid-row-gap: 120px;
+        margin-top: 66px;
+        margin-left: 83px;
+        margin-right: 83px;
 
         justify-items: center;
         align-items: center;
@@ -81,14 +86,16 @@
     
     font-family: 'Montserrat';
     text-align: center;
+    grid-column-gap: 8px;
 
     &__title {
         grid-column: input-s/input-e;
 
-        border-top: 1px solid #b3b3b3;
         color: #b3b3b3;
         font-size: 12px;
         font-weight: 300;
+
+        height: 47px;
     }
     input {
         grid-column: input-s/input-e;
@@ -96,8 +103,16 @@
         border: none;
         font-size: 15px;
         text-align: center;
-    
+        margin: 4px 0;
+        border-bottom: 1px solid #b3b3b3;
+        margin-bottom: 1px;
+        transition: all .3s ease;
+        &:focus{
+            outline: none;
+            border-bottom: 1px solid #00cb79;
+        }
     }
+
     &__number {
         grid-column: number-s/number-e;
 
@@ -106,7 +121,8 @@
         font-size: 20px;
         text-align: center;
         padding-top: 1px;
-
+        height: 26px;
+        width: 26px;
         border-radius: 50%;
     }
 }
