--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,5 +1,17 @@
+@mixin button {
+    height: 50px;
+    width: 300px;
+    border-radius: 4px;
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,.1);
+    color: white;
+    font-family: 'Montserrat';
+    font-size: 22px;
+    text-align: center;
+}
+
+
 .home {
-    postition: relative;
+    position: relative;
 
     background-color: rgba(207, 207, 207, 0.06);
     display: grid;
@@ -77,6 +89,25 @@
         justify-items: center;
         align-items: center;
     }
+
+    button:focus {
+        outline: none;
+    }
+
+    button {
+        justify-self: center;
+    }
+
+    &__generate {
+        background-color: #00cb79;
+        @include button;
+    }
+
+    &__clear {
+        background-color: #45b0e5;
+        @include button;
+    }
+
 }
 
 .input {
