--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -96,6 +96,7 @@
 
     button {
         justify-self: center;
+        transform: translateY(50%);
     }
 
     &__generate {
@@ -106,6 +107,23 @@
     &__clear {
         background-color: #45b0e5;
         @include button;
+    }
+
+    &__content {
+        width: 1100px;
+        height: 297px;
+        background-color: #F2F2F2;
+
+        justify-self: center;
+        margin-bottom: 84px;
+
+        p{
+            line-height: 29px;
+            padding: 50px 47px;
+            font-family: 'Montserrat';
+            font-size: 16px;
+            font-weight: 300;
+        }
     }
 
 }
