--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -103,15 +103,17 @@
 
     button {
         justify-self: center;
-        transform: translateY(50%);
+        
     }
 
     &__generate {
         background-color: #00cb79;
+        transform: translateY(-355px);
         @include button;
     }
 
     &__clear {
+        transform: translateY(50%);
         background-color: #45b0e5;
         @include button;
     }
